# EyeBreak

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/release-notes/: v0.1.0.md
src/: i18n.js  index.html  main.js  overlay.css  overlay.html  overlay.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  flow.rs  idle.rs  lib.rs  lock.rs  main.rs  overlay.rs  timer.rs  tray.rs  updater.rs
src-tauri/src/context/: battlenet.rs  epic.rs  gog.rs  mod.rs  steam.rs  ubisoft.rs  xbox.rs
